k8s/apps/rollout-demo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-demo
  namespace: rollout-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rollout-demo
  template:
    metadata:
      labels:
        app: rollout-demo
    spec:
      containers:
        - name: rollout-demo
          image: argoproj/rollouts-demo:blue
          ports:
            - containerPort: 8080
  strategy:
    canary:
      canaryService: rollout-demo-canary
      stableService: rollout-demo-stable
      trafficRouting:
        nginx:
          stableIngress: rollout-demo
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 50
        - pause: {}
        - setWeight: 80
        - pause: {}
